# GLCM-Extracting

./: CMakeLists.txt  GLCMextractor.h  README.md
GLCM/: GLCM Extracting.cpp  GLCM Extracting.slnx  GUIInterface.cpp  GUIInterface.h  main.cpp
